--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                     <div class="col-lg-7">
                         <h3 class="mb-20">Web & Backend Developer</h3>
-                        <p>Hello! I’m <strong>Bayu Hidayah Melandy</strong>. Web Developer with over 3 years of
+                        <p>Hello! I’m <strong>Bayu Hidayah Melandy</strong>. Developer with over 3 years of
                             experience. Experienced with all stages of the development cycle for dynamic web and backend
                             projects. Having an in-depth knowledge including advanced <strong>HTML5, CSS3, JavaScript,
                                 jQuery, Laravel and CodeIgniter</strong>. I aim to make a difference through my creative
