--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
 <body>
 
     <!--Preloader Start-->
-    <!-- <div class="preloader">
-            <div class="loading-text">
-                <span class="loading-text-words" data-preloader="L">L</span>
-                <span class="loading-text-words" data-preloader="O">O</span>
-                <span class="loading-text-words" data-preloader="A">A</span>
-                <span class="loading-text-words" data-preloader="D">D</span>
-                <span class="loading-text-words" data-preloader="I">I</span>
-                <span class="loading-text-words" data-preloader="N">N</span>
-                <span class="loading-text-words" data-preloader="G">G</span>
-            </div>
-        </div> -->
+    <div class="preloader">
+        <div class="loading-text">
+            <span class="loading-text-words" data-preloader="L">L</span>
+            <span class="loading-text-words" data-preloader="O">O</span>
+            <span class="loading-text-words" data-preloader="A">A</span>
+            <span class="loading-text-words" data-preloader="D">D</span>
+            <span class="loading-text-words" data-preloader="I">I</span>
+            <span class="loading-text-words" data-preloader="N">N</span>
+            <span class="loading-text-words" data-preloader="G">G</span>
+        </div>
+    </div>
     <!--Preloader End-->
 
     <!-- Header Start -->
     <header>
 
         <!-- logo -->
-        <a class="logo" href="#"><span>B</span></a>
+        <a class="logo" href="https://bayoehidayah.github.io"><span>B</span></a>
 
         <!-- navigation button -->
         <div class="menu-button">
