--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
 
@@ -44,9 +44,7 @@
         }
     </style>
 </head>
-
 <body>
-
     <!--Preloader Start-->
     <div class="preloader">
         <div class="loading-text">
