--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <header>
 
         <!-- logo -->
-        <a class="logo" href="https://bayoehidayah.github.io"><span>B</span></a>
+        <a class="logo" href="#home"><span>B</span></a>
 
         <!-- navigation button -->
         <div class="menu-button">
