--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                     <span class="date">2020-2021</span>
                                     <span class="company">PT. Bungkus Teknologi Indonesia</span>
                                 </h5>
-                                <p>Using laravel as the based framework for the company. Start build and developer their
+                                <p>Using laravel as the based framework for the company. Start build and developing their
                                     own products</p>
                             </li>
                         </ul>
