--- a/index.html
+++ b/index.html
@@ -188,33 +188,18 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                   <!-- <div class="row">
                             <div class="col-md-12">
-                                <!-- resume button -->
                                 <div class="resume-button">
                                     <a class="main-btn" href="cv.pdf">Download CV</a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
                 <!--About Info Section End-->
-            </div>
-        </section>
-        <!--About Section End-->
-
-        <!--Resume Page Start-->
-        <section id="resume" class="page section-resume">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="page-heading">
-                            <h2 data-shadow="Resume">Resume</h2>
-                        </div>
-                    </div>
-                </div>
-
+                
                 <div class="row mb-10">
 
                     <!--Experience Column Start-->
@@ -432,7 +417,20 @@
 
                 </div>
                 <!--Skills Row End-->
+            </div>
+        </section>
+        <!--About Section End-->
 
+        <!--Resume Page Start-->
+        <section id="resume" class="page section-resume">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="page-heading">
+                            <h2 data-shadow="Resume">Resume</h2>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!--Resume Page End-->
