--- a/index.html
+++ b/index.html
@@ -199,6 +199,20 @@
                     </div>
                 </div>
                 <!--About Info Section End-->
+            </div>
+        </section>
+        <!--About Section End-->
+
+        <!--Resume Page Start-->
+        <section id="resume" class="page section-resume">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="page-heading">
+                            <h2 data-shadow="Experience">Experience</h2>
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="row mb-10">
 
@@ -417,20 +431,6 @@
 
                 </div>
                 <!--Skills Row End-->
-            </div>
-        </section>
-        <!--About Section End-->
-
-        <!--Resume Page Start-->
-        <section id="resume" class="page section-resume">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="page-heading">
-                            <h2 data-shadow="Resume">Resume</h2>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
         <!--Resume Page End-->
