--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="nav-menu--links">
                 <a class="nav-menu--link link--active" href="#home"><i class="fas fa-home"></i><span>Home</span></a>
                 <a class="nav-menu--link" href="#about"><i class="fas fa-user"></i><span>About</span></a>
-                <a class="nav-menu--link" href="#resume"><i class="fas fa-address-card"></i><span>Resume</span></a>
+                <a class="nav-menu--link" href="#resume"><i class="fas fa-address-card"></i><span>Experience</span></a>
                 <a class="nav-menu--link" href="#portfolio"><i class="fas fa-briefcase"></i><span>Portfolio</span></a>
                 <a class="nav-menu--link" href="#contact"><i class="fas fa-envelope"></i><span>Contact</span></a>
             </div>
