--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
             width: 600px;
         }
     </style>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153712130-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-153712130-1');
+    </script>
 </head>
 <body>
     <!--Preloader Start-->
@@ -677,7 +687,4 @@
     </script>
 
 </body>
-
-<!-- Mirrored from clarks-vcard.netlify.com/index-particles2.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 05 Dec 2019 06:51:09 GMT -->
-
 </html>
